# iTex

./: .gitignore  README.md  build.sh  project.yml
Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
Sources/: App.swift  ChkTexLinter.swift  CompileEngine.swift  CompletionController.swift  ContentView.swift  EditorView.swift  ErrorPopover.swift  Info-iOS.plist  Info-macOS.plist  LaTeXCommands.swift  LaTeXCompiler.swift  LaTeXDocument.swift  LaTeXEditorView.swift  PDFPreviewView.swift  SettingsView.swift  Shortcuts.swift  SyncTeX.swift  TectonicBackend.swift  TexLabClient.swift  WelcomeWindow.swift
cli/: Package.swift
cli/Sources/itex/: CompileEngine.swift  Selfcheck.swift  Shims.swift  SyncTeX.swift  WarmBench.swift  main.swift
docs/: 01-problem-definition.md  02-concretization.md  03-solution-space.md  04-architecture-and-extensibility.md  05-validation-and-plan.md  IMPLEMENTATION.md  README.md  appendix-sources-and-verdicts.md
integration/: README.md  latex-workshop.settings.jsonc  latexmkrc  texlab.toml
tectonic-ffi/: Cargo.toml  README.md  build-macos.sh  build-xcframework.sh
tectonic-ffi/include/: itex_tectonic.h
tectonic-ffi/module/: module.modulemap
tectonic-ffi/src/: lib.rs
